2002-12-05  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_editor_event_command): init GValue before
	use

	* htmlimage.c (html_image_resolve_image_url): init GValue before
	use

	* htmlengine-edit-tablecell.c (html_engine_set_cspan): new method
	(html_engine_set_rspan): ditto, TODO
	(expand_cspan): ditto, not finished yet
	(collapse_cspan): ditto, TODO

	* htmlengine-edit-table.c (html_table_insert_column): renamed, now
	is public
	(html_table_insert_row): ditto

	* htmltablecell.c (html_table_cell_is_empty): new method, moved
	from htmltable.c, it's now public

	* htmlengine-edit-cut-and-paste.c (html_engine_delete):
	reimplemented, make it work better with tables

2002-12-02  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (move_image_pointers): emit url requested signal, so
	moved image pointers are loaded

2002-11-27  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (button_press_event): return TRUE so we could
	g_connect_after in control

2002-11-26  Larry Ewing  <lewing@ximian.com>

	* htmltablecell.c (draw_background_helper): don't try to get a
	pixbuf from a NULL animation.

	* gtkhtml.c (gtk_html_insert_html_generic): re-add the form
	pasting fix tht seems to have been lost somewhere..

2002-11-26  Not Zed  <NotZed@Ximian.com>

	* htmlembedded.c (draw): Dont do a queue_redraw if we're ever
	asked to draw.  Hack-fix to stop evolution-mail hanging so often.
	Added FIXME about it.

2002-11-21  Radek Doulik  <rodo@ximian.com>

	* htmlplainpainter.c (draw_text): use lower level pango iface

	* htmlgdkpainter.c
	(html_gdk_painter_text_itemize_and_prepare_glyphs): exported

	* htmltextslave.c (get_words_width): make sure we don't read
	word_width [-1]

	* htmlclueflow.c (object_nb_width): fixed typo, use
	html_text_slave_get_nb_width instead of html_text_slave_nb_width

2002-11-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_i): parse style args.

	* htmlstyle.c: add missing includes.

	* htmlstyle.h: add missing prototypes.
